# Ops_Assistant_Bot

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
scripts/: doc_generator.py
utils/: __init__.py  document_loader.py  env_sync.py  llm_provider.py  text_preprocessor.py  vector_store.py
vector_stores/: opss_index.faiss
vector_stores/opss_index/: index.pkl
