[project]
name = "operations-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.109.1",
    "faiss-cpu>=1.14.3",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.9",
    "langchain-anthropic>=1.4.6",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-google-genai>=4.2.5",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.4.6",
    "openai>=2.41.1",
    "pandas>=3.0.3",
    "pathlib>=1.0.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "tiktoken>=0.13.0",
    "torchvision>=0.27.0",
]
